--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
 
 *.pyc
-*.pyc
-*.pyc
-output/dist_dict_Bayesian.json
 .DS_Store
-output/dist_dict_Bayesian.json
-output/dist_dict_Bayesian.json
+output/
+.DS_Store
